[tool.poetry]
name = "discord-bot"
version = "0.0.1"
description = "Bot para manter a ordem no Kud"
authors = [
    "Leonardo Godoy <leonardoggavellar@gmail.com>",
    "Bernardo Lins <bernardolins28@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
"discord.py" = "==2.0.1"
table2ascii = "^0.3.0"
backoff = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
flake8 = "^5.0.4"
pylint = "^2.15.3"

