[tool.poetry]
name = "discord-bot"
version = "0.0.1"
description = "Bot para manter a ordem no Kud"
authors = [
    "Leonardo Godoy <leonardoggavellar@gmail.com>",
    "Bernardo Lins <bernardolins28@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
"discord.py" = "==2.2.3"
table2ascii = "^0.3.0"
backoff = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", allow-prereleases = true}
flake8 = "^6.0.0"
pylint = "^2.17.4"

